Pie integration and update done

--- a/source/styles/main.css
+++ b/source/styles/main.css
@@ -62,3 +62,10 @@ div.tooltip {
     stroke: lightgrey;
     opacity: 0.7;
 }
+
+ .legend {                                                   /* NEW */
+        font-size: 12px;                                          /* NEW */
+}                                                           /* NEW */
+rect {                                                      /* NEW */
+        stroke-width: 2;                                          /* NEW */
+}     
